updated js filename

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <!-- Script Link to Javascript -->
 
-<script type="text/javascript" src="assets/javascript/app.js"></script>
+<script type="text/javascript" src="assets/Javascript/app.js"></script>
 
 <!-- Link MP3 file -->
 <audio controls autoplay>
